wdl-analysis/tests/validation/directory-type-unsupported/source.errors
error: use of the `Directory` type requires WDL version 1.2
  ┌─ tests/validation/directory-type-unsupported/source.wdl:6:5
  │
6 │     Directory x = "foo"
  │     ^^^^^^^^^

warning[UnusedDeclaration]: unused declaration `x`
  ┌─ tests/validation/directory-type-unsupported/source.wdl:6:15
  │
6 │     Directory x = "foo"
  │               ^

